--- a/buildtools/Makefile
+++ b/buildtools/Makefile
@@ -28,6 +28,8 @@ source: checkroot
 		-f ../`dpkg-parsechangelog | awk '/Source: / { print $$2 }'`_`perl -npe 's/(.+)-.*/$$1/' debian/version`.orig.tar.gz ../`basename $$(pwd)`
 
 pkg: checkroot
+	# so we can use that later to find out what to upload if needs be
+	dpkg-parsechangelog | awk '/Version: / { print $$2 }' >| debian/version
 	# FIXME: sign packages when we move to apt 0.6
 	# FIXME: don't clean before building !!!
 	/usr/bin/debuild -i -us -uc
