--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@
 export DH_COMPAT=4
 
 PACKAGES := $(shell dh_listpackages)
-MVVM_DESTDIR := $(CURDIR)/debian/mvvm
+UVM_DESTDIR := $(CURDIR)/debian/uvm
 
 TMP_NAT_DEB := /tmp/nat-transform.deb
 
@@ -104,7 +104,7 @@ binary-arch: install
 	@dh_md5sums
 	@dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
 	# FIXME: oh, nastiness (not as nasty as Dirk's rebuildmvvm.sh, but that ain't saying much heh)
-	@cp -f ../nat-transform_*`cat debian/version`*deb $(MVVM_DESTDIR)/var/lib/uvm/nat-transform.deb
+	@cp -f ../nat-transform_*`cat debian/version`*deb $(UVM_DESTDIR)/var/lib/uvm/nat-transform.deb
 	@dh_md5sums
 	@dh_builddeb -p mvvm --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
 
